// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a queue 1`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [],
          "subscribers": Array [],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`messages are requeued if the function fails 1`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_queue-OnMessage-e645076f/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [],
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "relationship": "inflight-reference",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "inflight-reference",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.25",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, batch size of 5 1`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_queue-OnMessage-e645076f/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [
            "A",
            "B",
            "C",
            "D",
            "E",
            "F",
          ],
          "subscribers": Array [
            Object {
              "batchSize": 5,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "relationship": "inflight-reference",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "inflight-reference",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.25",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, default batch size of 1 1`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_queue-OnMessage-e645076f/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [],
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "relationship": "inflight-reference",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "inflight-reference",
                "resource": "root/WingLogger",
              },
              Object {
                "direction": "inbound",
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.25",
              },
              "id": "Code",
              "path": "root/my_queue-OnMessage-e645076f/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
